--- a/Mock Test 1 - Data Science.ipynb
+++ b/Mock Test 1 - Data Science.ipynb
@@ -59,6 +59,7 @@
    "source": [
     "import time\n",
     "\n",
+    "# Function to measure excecution time of a function\n",
     "def timer(func):\n",
     "    def wrapper(*args, **kwargs):\n",
     "        start_time = time.time()\n",
@@ -69,6 +70,7 @@
     "        return result\n",
     "    return wrapper\n",
     "\n",
+    "# Decorator Function\n",
     "@timer\n",
     "def rakesh_timer_function():\n",
     "    # Function code goes here\n",
@@ -99,6 +101,7 @@
     }
    ],
    "source": [
+    "# Function to calculate the mean\n",
     "def calculate_mean(numbers):\n",
     "    total = sum(numbers)\n",
     "    count = len(numbers)\n",
@@ -120,7 +123,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -134,6 +137,7 @@
    "source": [
     "from scipy import stats\n",
     "\n",
+    "# Function to perform two-sample t-test and return P-value\n",
     "def perform_hypothesis_test(list_1, list_2):\n",
     "    t_test, p_value = stats.ttest_ind(sample1, sample2)\n",
     "    return t_test, p_value\n",
@@ -144,6 +148,13 @@
     "t_test, p_value = perform_hypothesis_test(sample1, sample2)\n",
     "print(\"P-value:\", p_value)"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
